[gd_scene load_steps=8 format=3 uid="uid://cdcpi0ixssbtn"]

[ext_resource type="Script" path="res://entities/enemies/basicEnemies/basicEnemy1Controller.gd" id="1_k5cmn"]
[ext_resource type="Texture2D" uid="uid://bw4sxrxdidklk" path="res://entities/enemies/enemySprites/basicEnemy1.png" id="2_bm208"]
[ext_resource type="Texture2D" uid="uid://buxixn4m0pf76" path="res://entities/enemies/enemySprites/basicEnemy1Hurt.png" id="3_att44"]
[ext_resource type="PackedScene" uid="uid://iyy1rqxkcxwq" path="res://entities/bulletPatterns/5shotDirect.tscn" id="4_pbk43"]
[ext_resource type="PackedScene" uid="uid://bjgsb4774pjfc" path="res://entities/bulletPatterns/shotgun.tscn" id="5_x2xvr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8nrxx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bm208")
}, {
"duration": 1.0,
"texture": ExtResource("3_att44")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0fy7"]
size = Vector2(32, 32)

[node name="BasicEnemy1" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_k5cmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8nrxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i0fy7")

[node name="dmgFlash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="atkCooldown" type="Timer" parent="."]
one_shot = true

[node name="5ShotDirect" parent="." groups=["attacks"] instance=ExtResource("4_pbk43")]

[node name="Shotgun" parent="." groups=["attacks"] instance=ExtResource("5_x2xvr")]
